# dagster-demo

./: .gitignore  .pre-commit-config.yaml  AGENTS.md  README.md  marimo.py  pyproject.toml  setup-data.sh  todo.md
.dagster_home/: dagster.yaml
docs/: dimensional-model.md  retailer-onboarding.md
faker/: generate.py
src/dagster_demo/: definitions.py
src/dagster_demo/components/: bronze.py  config_utils.py  constants.py  gold.py  ingestion.py  logger.py  output_metadata.py  polars_metadata.py  polars_schemas.py  refinement.py  sensors.py  silver.py
src/dagster_demo/defs/assets/carretwo/: bronze.py  checks.py  config.py  silver.py
src/dagster_demo/defs/assets/carretwo_fr/: bronze.py  checks.py  config.py  silver.py
src/dagster_demo/defs/assets/gold/: prod_dim.py  site_dim.py  store_day_fct.py  store_month_fct.py  store_week_fct.py
src/dagster_demo/defs/assets/lidlo/: bronze.py  checks.py  config.py  silver.py
src/dagster_demo/defs/assets/lidlo_de/: bronze.py  checks.py  config.py  silver.py
src/dagster_demo/defs/assets/targetto_us/: bronze.py  checks.py  config.py  silver.py
src/dagster_demo/defs/checks/: __init__.py
src/dagster_demo/defs/partitions/: __init__.py
src/dagster_demo/defs/resources/: __init__.py  freshness_policy.py  iomanagers.py
src/dagster_demo/defs/sensors/: __init__.py
