[project]
name = "dagster_demo"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster==1.10.18",
    "polars[deltalake]>=1.30.0",
]

[project.entry-points]
"dagster_dg_cli.plugin" = { dagster_demo = "dagster_demo.components"}

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli[local]",
    "faker>=37.3.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_demo"


[tool.dg.project.python_environment]
active = true
