[project]
name = "dagster_demo"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster-polars[deltalake]>=0.27.2",
    "dagster>=1.10.18",
    "deltalake<1.0.0", #TODO: TEST NATIVE POLARS SINK DELTA AND OPEN ISSUE FOR DELTALAKE>1
    "patito>=0.8.3",
    "polars[deltalake]>=1.30.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli[local]",
    "faker>=37.3.0",
    "ipykernel>=6.29.5",
    "pre-commit>=4.2.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_demo"
autoload_defs = true


[tool.dg.project.python_environment]
active = true
