[project]
name = "dagster_demo"
requires-python = ">=3.9,<3.13"
version = "0.1.0"
dependencies = [
    "dagster>=1.10.18",
    "dagster-delta[polars]>=0.5.3",
    "patito>=0.8.3",
    "polars[deltalake]>=1.30.0",
]

[dependency-groups]
dev = [
    "dagster-webserver",
    "dagster-dg-cli",
    "faker>=37.3.0",
    "pre-commit>=4.2.0",
    "mypy>=1.16.1",
    "ruff>=0.12.1",
    "marimo[recommended]>=0.14.16",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.dg]
directory_type = "project"

[tool.dg.project]
root_module = "dagster_demo"
